[gd_scene load_steps=17 format=3 uid="uid://dvnbvm8bydpao"]

[ext_resource type="Script" path="res://game/enemies/witch/witch_1.gd" id="1_5g2as"]
[ext_resource type="Texture2D" uid="uid://ou6q7we48gkw" path="res://assets/graphics/FlyingLevel/Witch.png" id="2_kjq0b"]
[ext_resource type="Texture2D" uid="uid://buoklgn5jc7hn" path="res://assets/graphics/FlyingLevel/Witch-cloth.png" id="3_eiyax"]
[ext_resource type="Script" path="res://components/move_component_1.gd" id="4_4wtuf"]
[ext_resource type="Script" path="res://components/spawner_component.gd" id="5_f1m8o"]
[ext_resource type="PackedScene" uid="uid://csyevsiffel1" path="res://game/enemies/witch/witch_zap_1.tscn" id="6_rbd5y"]
[ext_resource type="Script" path="res://components/hurtbox_component.gd" id="7_yxomh"]
[ext_resource type="Script" path="res://components/hitbox_component.gd" id="8_mldry"]
[ext_resource type="Script" path="res://components/color_flicker_component.gd" id="9_q41ww"]

[sub_resource type="AtlasTexture" id="AtlasTexture_igj2v"]
atlas = ExtResource("2_kjq0b")
region = Rect2(0, 0, 24, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_jgp4y"]
atlas = ExtResource("2_kjq0b")
region = Rect2(24, 0, 24, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_xg7my"]
atlas = ExtResource("2_kjq0b")
region = Rect2(48, 0, 24, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_1q0la"]
atlas = ExtResource("2_kjq0b")
region = Rect2(72, 0, 24, 20)

[sub_resource type="SpriteFrames" id="SpriteFrames_cuehd"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_igj2v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jgp4y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xg7my")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1q0la")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qpdll"]
size = Vector2(16, 19)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gf6k4"]
size = Vector2(24, 16)

[node name="Witch" type="Node2D"]
z_index = 1
script = ExtResource("1_5g2as")

[node name="Body" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_cuehd")
autoplay = "default"
frame_progress = 0.836506

[node name="Dress" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("3_eiyax")

[node name="MoveComponent" type="Node" parent="." node_paths=PackedStringArray("actor")]
script = ExtResource("4_4wtuf")
actor = NodePath("..")
velocity = Vector2(-50, 0)

[node name="SpawnerComponent" type="Node2D" parent="."]
script = ExtResource("5_f1m8o")
what_to_spawn = ExtResource("6_rbd5y")

[node name="FireRateTimer" type="Timer" parent="."]
one_shot = true

[node name="ZapMarker" type="Marker2D" parent="."]
position = Vector2(-17, 3)

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="."]
rect = Rect2(-12, -9, 24, 19)

[node name="HurtboxComponent" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 0
script = ExtResource("7_yxomh")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent"]
position = Vector2(-2, 0.5)
shape = SubResource("RectangleShape2D_qpdll")

[node name="HitboxComponent" type="Area2D" parent="."]
collision_layer = 0
script = ExtResource("8_mldry")
damage = 400

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
position = Vector2(0, 2)
shape = SubResource("RectangleShape2D_gf6k4")

[node name="ColorFlickerComponent" type="Node" parent="." node_paths=PackedStringArray("sprite")]
script = ExtResource("9_q41ww")
sprite = NodePath("../Dress")
